add send task request and update location request
